# jit-aot-compilers-course

./: .gitignore  CMakeLists.txt  README.md  factorial.cpp
include/: BasicBlock.hpp  CheckElimination.hpp  DominatorAnalysis.hpp  DominatorTree.hpp  Graph.hpp  IRBuilder.hpp  Inliner.hpp  Instruction.hpp  LinearOrderBuilder.hpp  LivenessAnalysis.hpp  LoopAnalyzer.hpp  Optimizer.hpp  RegisterAllocator.hpp
src/: CheckElimination.cpp  DominatorAnalysis.cpp  Dump.cpp  Graph.cpp  LivenessAnalysis.cpp  LoopAnalysis.cpp  Optimizer.cpp
tests/: BuildGraphs.hpp  Check_tests.cpp  Inlining_tests.cpp  LivenessAnalysis_tests.cpp  Loops_tests.cpp  Opt_tests.cpp  RegAlloc_tests.cpp  TestRunner.cpp  TestRunner.hpp  TestsUtils.hpp  main_test.cpp
